--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-beautifulsoup4==4.9.3
-google-api-python-client==2.31.0
-psycopg2==2.9.2
-selenium==4.1.0
 spotipy==2.17.1
-sqlalchemy
+sqlalchemy==1.4.32
 tqdm==4.62.2
-webdriver-manager==3.5.2
+ytmusicapi==0.21.0
